# chathub

./: .gitignore  .mcp.json  .prettierignore  .prettierrc.json  2026-06-03-A方案-发送即本地落权威行-设计稿.md  2026-06-03-发送接口与notify乱序客户端处理说明.md  2026-06-03-发送消息-生产稳态设计-单写者+链接键.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  __badge_preview.html  components.json  docker-compose copy.yml  docker-compose.yml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  relay.db  relay.db-shm  relay.db-wal  splash.pen  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/skills/chathub-repo-map/: SKILL.md
.cargo/: config.toml
.claude/: settings.json
.claude/skills/chathub-repo-map/: SKILL.md
.github/workflows/: build.yml  proto.yml
.specstory/plans/: 2025-05-29-1430-customer-detail-cache.md
backends/: Cargo.toml  build.rs  clippy.toml  rustfmt.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
backends/capabilities/: default.json  image-preview.json  video-preview.json
backends/crates/chathub-net/: Cargo.toml  build.rs
backends/crates/chathub-net/src/: account_event.rs  auth.rs  change_notice.rs  channel.rs  error.rs  friend_event.rs  hub.rs  interceptor.rs  lib.rs  message_event.rs  message_sync.rs  oss.rs  recent_session_event.rs  sync.rs  token.rs
backends/crates/chathub-net/tests/: auth_e2e.rs  force_close_e2e.rs  hub_e2e.rs  message_e2e.rs  s1_clean_reconnect_e2e.rs  session_expiry_e2e.rs  silence_watchdog_e2e.rs
backends/crates/chathub-net/tests/common/: mod.rs  stub_relay.rs
backends/crates/chathub-proto/: Cargo.toml  build.rs
backends/crates/chathub-proto/src/: lib.rs
backends/crates/chathub-relay/: Cargo.toml  README.md
backends/crates/chathub-relay/migrations/: 001_initial.sql  002_events_v2.sql  003_drop_legacy.sql
backends/crates/chathub-relay/src/: auth_service.rs  config.rs  downstream.rs  error.rs  event_policy.rs  hub_service.rs  jwt.rs  lib.rs  main.rs  nacos.rs  push.rs  router.rs  secret.rs
backends/crates/chathub-relay/src/storage/: events.rs  kv.rs  migrations.rs  mod.rs  seqs.rs  sessions.rs
backends/crates/chathub-relay/tests/: relay_e2e.rs
backends/crates/chathub-relay/tests/common/: mod.rs
backends/crates/chathub-state/: Cargo.toml
backends/crates/chathub-state/migrations/: V10__local_draft_text.sql  V11__recents_removed.sql  V12__recents_muted.sql  V13__recents_version.sql  V14__conversation_messages.sql  V15__quick_replies.sql  V16__retire_friends_store_and_watermarks.sql  V17__recents_opened_at.sql  V18__friend_detail_cache.sql  V19__image_meta.sql  V1__init.sql  V20__normalize_message_direction.sql  V21__session_user_fields.sql  V22__messages_revoked_fail_reason.sql  V23__recents_local_last_sent.sql  V24__idx_hub_msgs_req.sql  V25__recents_backfill_display_time.sql  V26__recents_backfill_remote_display_time.sql  V27__quarantined_events.sql  V28__purge_dirty_unknown_out_bubbles.sql  V29__messages_source_direction.sql  V2__seqs.sql  V30__session_terminal_id.sql  V31__recents_read_watermark.sql  V32__recents_dedup_friend.sql  V33__user_settings.sql  V34__purge_resend_dup_failed.sql  V3__kv.sql  V4__account_cache.sql  V5__friends_cache.sql  V6__friends_store.sql  V7__recent_sessions.sql  V8__friends_employee_id.sql  V9__recents_employee_id.sql
backends/crates/chathub-state/src/: account_cache.rs  error.rs  friend_detail_cache.rs  friends_cache.rs  image_meta.rs  lib.rs  local_token.rs  messages.rs  notify_seq.rs  pool.rs  quarantined_events.rs  quick_replies.rs  recent_sessions.rs  seqs.rs  session.rs  tokens.rs  user_settings.rs
backends/icons/: icon.icns
backends/src/: ai_polish.rs  image_cache.rs  image_prefetch.rs  lib.rs  logging.rs  main.rs  media.rs  settings.rs
crates/chathub-proto/: Cargo.toml  build.rs
docs/: 2026-06-02-工具网关notify-push请求模板.md  2026-06-08-多端登录force_close终端粒度-后台契约对齐.md  2026-06-08-多端登录force_close终端粒度-方案B实施计划.md  README.md  工具网关通知事件与字段规范.md
docs/api/: README.md  listFriends.md  listMine.md  verifyToken.md
docs/db/: conventions.md
docs/mockups/: multi-device-sync-bubble-styles.html  pinned-section-grouping.html
docs/superpowers/plans/: 2026-05-06-composer-rich-content.md  2026-05-08-customers-avatar-account.md  2026-05-08-sidebar-hover-collapse.md  2026-05-10-chat-protocol-auth.md  2026-05-10-chat-protocol-foundation.md  2026-05-10-chat-protocol-stream.md  2026-05-11-chat-protocol-auth.md  2026-05-11-chat-protocol-chat-actions.md  2026-05-11-chat-protocol-relay.md  2026-05-20-message-persistence.md  2026-05-22-receive-message-flow.md  2026-05-23-sidebar-employee-badge.md  2026-05-30-messages-image-and-direction.md  2026-06-01-messages-history-pagination-polish.md  2026-06-03-p1-subscribe-deadlock-fix.md  2026-06-03-p2-client-robustness-observability.md  2026-06-03-p3-resync-cursor-and-safety-net.md  2026-06-03-p4-relay-resync-skip-replay.md  2026-06-05-outbox-backend-persistence.md  2026-06-05-outbox-frontend-ipc.md  2026-06-05-outbox-frontend-ordering.md  2026-06-11-composer-drag-drop.md
docs/superpowers/specs/: 2026-05-06-composer-rich-content-design.md  2026-05-08-customers-avatar-account-design.md  (+23 more)
frontends/: App.tsx  __badge_preview.tsx  fonts.css  index.css  main.tsx  vite-env.d.ts
frontends/components/: ErrorBoundary.tsx  Login.tsx  Splash.tsx  TitleBar.test.tsx  TitleBar.tsx  WindowResizeEdges.test.tsx  WindowResizeEdges.tsx  Workbench.tsx
frontends/lib/: assetImageSrc.test.ts  assetImageSrc.ts  cachedImageSrc.ts  downloadAttachment.ts  openExternal.ts  openImagePreviewWindow.ts  openVideoPreviewWindow.ts  platform.ts  sanitizeFileName.test.ts  sanitizeFileName.ts  secureImageUrl.test.ts  secureImageUrl.ts  theme.ts  updater.ts  useEscKey.ts  useFitScale.ts  useWindowMaxSize.ts  utils.ts
proto/: buf.gen.yaml  buf.yaml
scripts/: .env.client.example  .env.example  build-mac.sh  build-windows.sh  bump-version.mjs  make-latest-json.mjs  probe_recent_friends.py  push-message.sh  push_test.py  release-upload.sh  run-mock-downstream.sh  run-relay-local.sh  run-relay-prod.sh  run-tauri-local.sh  test-hub-subscribe.sh
(+221 files in other folders)
