# Cargo.toml(repo root)
[workspace]
resolver = "2"
members = [
  "backends",
  "backends/crates/chathub-proto",
  "backends/crates/chathub-state",
]

# 所有 workspace 成员共享的依赖版本(Plan 1 只列 chathub-proto 用得着的)
[workspace.dependencies]
prost        = "0.13"
prost-types  = "0.13"
tonic        = { version = "0.12", default-features = false, features = ["transport", "tls", "tls-roots", "codegen", "prost"] }
tonic-build  = { version = "0.12", default-features = false, features = ["prost", "transport"] }
bytes        = "1"
serde        = { version = "1", features = ["derive"] }
thiserror    = "1"
anyhow       = "1"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing      = "0.1"
parking_lot  = "0.12"
rusqlite     = { version = "0.32", features = ["bundled"] }
deadpool-sqlite = { version = "0.9" }
rusqlite_migration = "1.3"
keyring      = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
uuid         = { version = "1", features = ["v4"] }

# Profile 调优(可选,但建议显式声明)
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = "thin"
strip = true
