# Cargo.toml(repo root)
[workspace]
resolver = "2"
members = [
  "backends",
  "backends/crates/chathub-proto",
  "backends/crates/chathub-state",
  "backends/crates/chathub-net",
  "backends/crates/chathub-relay",
]

# 所有 workspace 成员共享的依赖版本(Plan 1 只列 chathub-proto 用得着的)
[workspace.dependencies]
prost        = "0.13"
prost-types  = "0.13"
tonic        = { version = "0.12", default-features = false, features = ["transport", "tls", "tls-roots", "codegen", "prost"] }
tonic-build  = { version = "0.12", default-features = false, features = ["prost", "transport"] }
bytes        = "1"
serde        = { version = "1", features = ["derive"] }
thiserror    = "1"
anyhow       = "1"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing      = "0.1"
parking_lot  = "0.12"
rusqlite     = { version = "0.32", features = ["bundled"] }
deadpool-sqlite = { version = "0.9" }
rusqlite_migration = "1.3"
keyring      = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
uuid         = { version = "1", features = ["v4"] }
# Plan 5 新增 ----
axum               = "0.7"
tower              = "0.4"
tower-http         = { version = "0.5", features = ["trace"] }
jsonwebtoken       = "9"
ring               = "0.17"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json         = "1"
hmac               = "0.12"
sha2               = "0.10"
hex                = "0.4"
base64             = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender   = "0.2"
# Plan 5 dev-only ----
wiremock           = "0.6"
tokio-stream       = "0.1"
tempfile           = "3"

# Profile 调优(可选,但建议显式声明)
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = "thin"
strip = true
