# Cargo.toml(repo root)
[workspace]
resolver = "2"
members = [
  "backends",
  "backends/crates/chathub-proto",
  "backends/crates/chathub-state",
  "backends/crates/chathub-net",
  "backends/crates/chathub-relay",
]

# 所有 workspace 成员共享的依赖版本(Plan 1 只列 chathub-proto 用得着的)
[workspace.dependencies]
prost        = "0.13"
prost-types  = "0.13"
tonic        = { version = "0.12", default-features = false, features = ["transport", "tls", "tls-roots", "codegen", "prost"] }
tonic-build  = { version = "0.12", default-features = false, features = ["prost", "transport"] }
bytes        = { version = "1", features = ["serde"] }
serde        = { version = "1", features = ["derive"] }
thiserror    = "1"
anyhow       = "1"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing      = "0.1"
parking_lot  = "0.12"
rusqlite     = { version = "0.32", features = ["bundled"] }
deadpool-sqlite = { version = "0.9" }
rusqlite_migration = "1.3"
keyring      = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
uuid         = { version = "1", features = ["v4"] }
# Plan 5 新增 ----
axum               = "0.7"
tower              = "0.4"
tower-http         = { version = "0.5", features = ["trace"] }
jsonwebtoken       = "9"
ring               = "0.17"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde_json         = "1"
hmac               = "0.12"
sha2               = "0.10"
hex                = "0.4"
base64             = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender   = "0.2"
subtle             = "2"
dashmap            = "6"
# 极致性能(F1+F6+F8 引入)----
mimalloc           = { version = "0.1", default-features = false }
arc-swap           = "1.7"
im                 = "15"
moka               = { version = "0.12", features = ["future"] }
num_cpus           = "1.16"
# Nacos 服务注册/发现 —— 只要 naming + http 鉴权,不引入 config 模块。
# 注:nacos-sdk 0.8 内部用 tonic/prost 0.14,与本仓 0.12/0.13 并存(互不传递类型,Cargo 自动多版本)。
nacos-sdk          = { version = "0.8", default-features = false, features = ["naming", "auth-by-http"] }
# Plan 5 dev-only ----
wiremock           = "0.6"
tokio-stream       = "0.1"
tempfile           = "3"

# Profile 调优
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = "fat"             # 全程序优化,~5-10% 吞吐
codegen-units = 1       # 单 codegen 单元,允许跨函数内联
strip = "symbols"       # 二进制减小 ~30%
panic = "abort"         # 移除展开代码,代码尺寸 -20% + L1 cache 命中略升

# 服务端(relay / mock-downstream)专用 release profile。继承 release 的全部优化,仅把
# panic 改回 unwind:常驻服务进程任一请求/任务 panic 时由 async 框架在 task 边界隔离
# (该连接/请求出错,而非整进程 abort 无恢复)。桌面客户端仍走 [profile.release]
# (panic=abort,二进制更小),二者互不影响。
# 说明:Cargo 的 panic 设置是 profile 级、无法按 package 覆盖,故服务端另开 profile。
# 构建:cargo/cross build --profile release-server -p chathub-relay
[profile.release-server]
inherits = "release"
panic = "unwind"
