[package]
name = "chathub"
version = "0.1.17"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chathub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "local-time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
anyhow = "1"
xcap = "0.9"
base64 = "0.22"
chathub-proto = { path = "crates/chathub-proto" }
chathub-state = { path = "crates/chathub-state" }
chathub-net   = { path = "crates/chathub-net" }
uuid = { workspace = true }
tokio = { workspace = true }
# 远程图片磁盘缩略图缓存(image_cache 模块 + cachedimg:// 协议)
reqwest = { workspace = true }
sha2 = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
tauri-plugin-dialog = "2.7.1"

